--- a/Index.html
+++ b/Index.html
@@ -1,36 +1,37 @@
 <!DOCTYPE html>
 <html>
 <head>
-           <title>MYTHOLOGY</title>
+    <title>MYTHOLOGY</title>
 </head>
 <body>
-           <h1 align="center" style="color:Blue;">MAHABHARATHA THE EPIC STORY</h1>
-<ol>Characters
-          <li>
-                 <ul>Pandavas
-                           <li>Dharmaraja</li>
-	           <li>Bheema</li>
-	           <li>Arjuna</li>
-	            <li>Nakula</li>
-	            <li>Sahadeva</li>
-          </ul>
-           </li>
-              <li>
-                      <ul>Kauravas
-		<li>Dhuryodhana</li>
-		<li>Dushasana</li>
-		<li>Vikarna</li>
-		<li>Dussala</li>
-		<li>other 97 members</li>
-	</ul>
-	</li>
-	  <li>
-	          <ul>Kuruvrudhulu
-		<li>Bheeshma</li>
-		<li>Vidura</li>
-		<li>Dronacharya</li>
-		  </ul>
-	  </li>
-</ol>
+    <h1 align="center" style="color:Blue;">MAHABHARATHA THE EPIC STORY</h1>
+    <h2>Characters</h2>
+    <ol>
+        <li>Pandavas
+            <ul>
+                <li>Dharmaraja</li>
+                <li>Bheema</li>
+                <li>Arjuna</li>
+                <li>Nakula</li>
+                <li>Sahadeva</li>
+            </ul>
+        </li>
+        <li>Kauravas
+            <ul>
+                <li>Dhuryodhana</li>
+                <li>Dushasana</li>
+                <li>Vikarna</li>
+                <li>Dussala</li>
+                <li>Other 97 members</li>
+            </ul>
+        </li>
+        <li>Kuruvrudhulu
+            <ul>
+                <li>Bheeshma</li>
+                <li>Vidura</li>
+                <li>Dronacharya</li>
+            </ul>
+        </li>
+    </ol>
 </body>
 </html>
